Fix typo in sysconfig template which would cause varnish to not start

--- a/templates/sysconfig.erb
+++ b/templates/sysconfig.erb
@@ -68,7 +68,7 @@ VARNISH_VCL_CONF=<%= @vcl_conf %>
 <% if @listen_address != nil -%>
 VARNISH_LISTEN_ADDRESS=<%= @listen_address -%>
 <% end -%>
-VARNISH_LISTEN_PORT=<%= @listen_port -%>
+VARNISH_LISTEN_PORT=<%= @listen_port %>
 #
 # # Telnet admin interface listen address and port
 VARNISH_ADMIN_LISTEN_ADDRESS=<%= @admin_listen_address %>
